--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <section id="container">
 
-            <article class="cartao">
+      <!--      <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -23,7 +23,7 @@
                         Java script é uma linguagem de Programação.
                     </div>
                 </div>
-            </article>
+            </article> -->
            
             <article class="cartao">
                 <div class="cartao__conteudo">
@@ -42,5 +42,7 @@
     <footer>
 <p>Projeto desenvolvido pelo Colégio Estadual Guilherme de Almeida, && Todos Direitos Reservados </p>
     </footer>  
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
