--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flash Card</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -25,18 +25,6 @@
                 </div>
             </article> -->
            
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Robótica</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        O que é um Arduíno?
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        O Arduíno é uma placa controladora, similar a placa mãe de um computador
-                        só que em uma tamanho menor.
-                    </div>
-                </div>
-            </article>
         </section>
     </main>
     <footer>
